# Algorithmic_Robotics_2026

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/lib/succulence_rover_ros/: motion_model_node
install/share/succulence_rover_ros/: package.sh
log/: latest_build
nvidia_gpu_fix/: README.md  compose-simulation-nvidia.yaml
nvidia_gpu_fix/code-server/config/: config.yaml
src/scripts/: real.sh  switch_mode.sh
src/succulence_rover_ros/: README.md  ROADMAP.md  package.xml  setup.py
src/succulence_rover_ros/config/: overrides_cpp.yaml  overrides_full.yaml  overrides_limited.yaml  overrides_none.yaml  params.yaml  params_base.yaml  params_physical.yaml  params_sim.yaml  succulance_costmap.rviz
src/succulence_rover_ros/install/: local_setup.sh  setup.sh
src/succulence_rover_ros/install/succulence_rover_ros/lib/succulence_rover_ros/: occupancy_grid_mapper_node
src/succulence_rover_ros/install/succulence_rover_ros/share/succulence_rover_ros/: package.ps1  package.sh
src/succulence_rover_ros/install/succulence_rover_ros/share/succulence_rover_ros/config/: params.yaml
src/succulence_rover_ros/launch/: mission.launch.py
src/succulence_rover_ros/succulence_rover_ros/: astar.py  cpp_mapper.cpp  cpp_optimizer.cpp  global_mapper.py  graph_optimizer.py  motion_model.py  navigator_node.py  occupancy_grid_mapper.py  path_follower.py  planner_node.py  pose_graph.py  scan_matcher.py  slam_estimator.py  slam_node.py  slam_node_lab08.py
src/succulence_rover_ros/succulence_rover_ros/.depricated/: slam_node.py
(+10 files in other folders)
